# rick_pico

./: .gitignore  CMakeLists.txt  main.cpp  policy_weights.h  rick_v2_pico.c
